<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/marker_image"
            android:layout_width="132dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/rounded_background"
            app:srcCompat="@drawable/google" />

        <Space
            android:layout_width="5dp"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />
            <TextView
                android:id="@+id/marker_name"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="24sp"
                android:background="@drawable/rounded_background"
                android:textAlignment="center"
                android:text="@string/marker_name" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />
            <TextView
                android:id="@+id/marker_places"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textAlignment="center"
                android:textSize="24sp"
                android:background="@drawable/rounded_background"
                android:text="@string/places_in_marker" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="150.dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="151dp">

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/marker_about_marker"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:textSize="24sp"
            android:background="@drawable/rounded_background"
            android:textAlignment="center"
            android:text="@string/About_marker" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/marker_street"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:textSize="24sp"
            android:background="@drawable/rounded_background"
            android:textAlignment="center"
            android:text="@string/Street" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
                android:id="@+id/marker_start_Date"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:textSize="24sp"
            android:background="@drawable/rounded_background"
            android:textAlignment="center"
            android:text="@string/Start_Date_and_Time" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/marker_end_Date"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:textSize="24sp"
            android:background="@drawable/rounded_background"
            android:textAlignment="center"
            android:text="@string/End_Date_and_Time" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <Button
                android:id="@+id/marker_button_not"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_background"
                android:text="@string/marker_button_not" />
            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />
            <Button
                android:id="@+id/marker_button_ready"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_background"
                android:text="@string/marker_button_ready"/>


        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>